--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/react": "^16.14.13",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "@types/styled-components": "^5.1.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-responsive": "*",
     "react-scripts": "4.0.3",
-    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.0",
     "twin.macro": "^2.6.2",
     "typescript": "~4.1.5"
   },
