--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/react": "^16.14.13",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
+    "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-native-dotenv": "^3.2.0",
     "react-redux": "^7.2.4",
     "react-responsive": "*",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "twin.macro": "^2.6.2",
