--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.7",
     "@craco/craco": "^6.2.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +17,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
     "dotenv": "^8.2.0",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
