--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.12",
     "dotenv": "^8.2.0",
+    "get-youtube-id": "^1.0.1",
     "graphql": "^15.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-native-dotenv": "^3.2.0",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-responsive": "*",
     "react-router-dom": "^5.2.0",
