--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_GITHUB_APP_ID=131313
 REACT_APP_GITHUB_CLIENT_ID=Iv1.2ea875d48dea537d
 REACT_APP_GITHUB_CLIENT_SECRET=1401a410d6c61233e1b6b91bb83c82ebf56f9858
-REACT_APP_REDIRECT_URI = "https://youtagram.azurewebsites.net/"
+REACT_APP_REDIRECT_URI_TEMP = "https://youtagram.azurewebsites.net/"
+REACT_APP_REDIRECT_URI = "http://localhost:3000/"
